...
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="loginErrorM">Invalid email/password</string>
    <string name="lockout">You are locked out for too many tries</string>
    <string name="registerErrorM">Email and password are required.</string>
    <string name="registerExistingUserErrorM">User already exists.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log In</string>
...
    <string name="searchware_location">Show if Warehouse</string>
    <string name="searchnum_location">Sort Numerically</string>
    <string name="searcharea_location">Sort By Area Code</string>
    <string name="searchclose_location">Sort By Closeness</string>
    <string name="locationaddress_location">Location Address</string>
    <string name="locationphone_location">Location Phone Number</string>
    <string name="addLocationErrorM">All fields must be filled in.</string>

    <string name="registerhere">Register Here</string>
    <string name="registertype">Account Type</string>
    <string name="guest">Log in as Guest</string>
    <string name="info_location">Location Information</string>
    <string name="header">Header is ::</string>
...
